Use Collections.emptyList
Co-Authored-By: Martin Junghanns <martin.junghanns@neotechnology.com>